--- a/src/main/webapps/metabolights/css/styles.css
+++ b/src/main/webapps/metabolights/css/styles.css
@@ -1,155 +1,150 @@
 
-/* Palette color codes */
-.primary-1 { background-color: #009E8E }
-.primary-2 { background-color: #1E776D }
-.primary-3 { background-color: #00675C }
-.primary-4 { background-color: #34CFBE }
-.primary-5 { background-color: #5DCFC3 }
-
-.complement-1 { background-color: #FF6C00 }
-.complement-2 { background-color: #BF6D30 }
-.complement-3 { background-color: #A64600 }
-.complement-4 { background-color: #FF9140 }
-.complement-5 { background-color: #FFAE73 }
-
 * {
-	margin: 0;
-	padding: 0;
+	margin: 0px;
 }
 
-
-body {
+html,body {
+	height: 99%;
 	background: #ffffff url(../img/bg.gif) repeat-x left top;
 	text-align: center;
 	font-family: Verdana, Arial, Helvetica, Geneva, sans-serif;
 	font-weight: normal;
-   font-size: 12px;
-   }
-
-#wrapper {
-	width:  1024px;
-	text-align: left;
-	margin: 0 auto;
-	padding-left:0;
+	font-size: 12px;
 }
 
-#top_bar {height: 55px;}
 
+/* Main structure styles (used to layout the header/footer) */
+.wrapper {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0px auto -4em;
+	position: relative;
+}
+#footer {
+	background-color: #003366;
+	padding: 5px;
+	text-align: center;
+	color: rgb(255, 255, 255);
+	font-size: 80%;
+	margin-top: 10px;
+	float: left;
+	width: 98%;
+	height: 4em;
+}
+#topAndBody {
+	width: 1024px;
+	text-align: left;
+	margin: 0px auto;
+	padding-bottom: 15px;
+}
+
+
+
+/* Style for the top bar (=header) */
+#top_bar {
+	height: 55px;
+}
 #top_bar h1 {
-	margin-top: 17px;
-	width: 250px;
+	margin-top: 10px;
+	width: 300px;
 	height: 55px;
 	font-size: 1px;
 	text-indent: -9999px;
 	background: url(../img/banner.png) no-repeat left top;
 	float: left;
+	margin-bottom: -20px;
 }
 #top_bar #navigation {
 	list-style: none;
-	margin-top: 33px;
+	margin-top: 28px;
 	float: right;
 	font-size: 13px;
 	font-weight: bold;
 }
-
 #top_bar #navigation a {
 	color: #ffffff;
 	text-decoration: none;
 }
-
 #top_bar #navigation li {
 	display: inline;
 	vertical-align: baseline;
 	padding-left: 30px;
 }
-
-#top_bar #navigation li.selected a, #top_bar #navigation li a:hover
-{
-   color:#5DCFC3;
+#top_bar #navigation li.selected a,#top_bar #navigation li a:hover {
+	color: #FFCC33;
 }
 
-#search-box
-   {
-    padding-left:10px ;
-    height:37px;
-    width:1024px;  
-    background-color:#FF9140}
 
-#search-box label
-   {float:left;
-    width:45px;
-    height:37px;
-    color:#fff;
-    font-size:12px;
-    font-weight:normal;
-    line-height:40px
+
+/* Style for the search box in the header */
+#search-box {
+	padding-left: 10px;
+	height: 33px;
+	float: left;
+	width: 1024px;
+	background-color: #999900
 }
-#search-box input
-   {float:left;
-    width:400px;
-    margin:10 0 0 10;
-    border:0;
+#search-box label {
+	float: left;
+	width: 45px;
+	height: 37px;
+	color: #fff;
+	font-size: 12px;
+	font-weight: normal;
+	line-height: 40px
+}
+#search-box input {
+	float: left;
+	width: 300px;
+	border: 0;
+	margin: 7px 0px 0px 10px; /* top right bottom left */
+	padding-bottom: 2px;
+	font-size: 14px;
+	height: 20px
     padding-bottom:2px;
-    font-size:14px;
-    height:20px}
-
-#search-box .search-box-button
-   {float:left;
-    margin:10 0 0 0;
-    padding:0px;
-    height:21px;
-    width:23px;
-    cursor:pointer; 
-    border:0px;
-    background-image:url('../img/searchButton.png');
 }
-#search-box a
-   {float:left;
-    height:37px;
-    font-size:12px;
-    font-weight:bold;
-    line-height:40px;
-    ttext-decoration: none;
-    padding-left:20px;
-    color: #A64600;
+#search-box .search-box-button {
+	float: left;
+	margin: 7px 0px 0px 0px;
+	padding: 0px;
+	height: 21px;
+	width: 23px;
+	cursor: pointer;
+	border: 0px;
+	background-image: url('../img/searchButton.png');
+    padding-bottom:2px;
 }
 
-
-
-
-#text_header {
-   padding: 10 0 5 15;  
-   background-color:#FFAE73;
-   font-size:130%;
-   font-weight: bold;
-   color: #A64600;
+#search-box a {
+	float: left;
+	height: 37px;
+	font-size: 12px;
+	font-weight: bold;
+	line-height: 40px;
+	ttext-decoration: none;
+	padding-left: 20px;
+	color: #660066;
 }
 
+
+
+
+#text_header { 
+	padding: 10px 0px 5px 15px;
+	background-color: #CC9933;
+	font-size: 130%;
+	font-weight: bold;
+	color:#336666;
+}
 #text-column {
-   padding: 15 15 25 15;  
+	padding: 15px 15px 25px 15px;
 	float: left;
 	color: #444444;
 	font-weight: lighter;
 	line-height: 1.5;
 	width: 30%;
-	testborder : 1px solid black;
+	##border: 1px solid black;
 }
 
-
-#copy {
-   padding: 120 20 5 4;
-   background-color:#00675C;
-	padding:5px;
-	text-align:center;
-	color:rgb(255,255,255);
-	font-size:80%;
-	margin-top:10px;
-	float: left;
-	width: 98%;
-}
-
-
-
-
-
-
+/*credits: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/*/
