User login added. Removed Contact demo application objects.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@67 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/css/styles.css
+++ b/src/main/webapps/metabolights/css/styles.css
@@ -61,6 +61,8 @@ html,body {
 	float: right;
 	font-size: 13px;
 	font-weight: bold;
+    color: #ffffff;
+	
 }
 #top_bar #navigation a {
 	color: #ffffff;
