--- a/src/main/webapps/metabolights/css/styles.css
+++ b/src/main/webapps/metabolights/css/styles.css
@@ -22,15 +22,16 @@ html,body {
 	position: relative;
 }
 #footer {
-	background-color: #003366;
-	padding: 5px;
+	background-color: #CCCCCC;
+	padding-top: 5px;
 	text-align: center;
 	color: rgb(255, 255, 255);
 	font-size: 80%;
 	margin-top: 10px;
 	float: left;
-	width: 98%;
+	width: 100%;
 	height: 4em;
+	color: #666666;
 }
 #topAndBody {
 	width: 1024px;
@@ -74,7 +75,7 @@ html,body {
 	padding-left: 10px;
 }
 #top_bar #navigation li.selected a,#top_bar #navigation li a:hover {
-	color: #FFCC33;
+	color: #CC99CC;
 }
 
 
@@ -84,8 +85,8 @@ html,body {
 	padding-left: 10px;
 	height: 33px;
 	float: left;
-	width: 1024px;
-	background-color: #999900
+	width: 1000px;
+	background : #999966 url(../img/searchBox.png) ;
 }
 #search-box label {
 	float: left;
@@ -115,7 +116,6 @@ html,body {
 	cursor: pointer;
 	border: 0px;
 	background-image: url('../img/searchButton.png');
-    padding-bottom:2px;
 }
 
 #search-box a {
@@ -126,17 +126,17 @@ html,body {
 	line-height: 40px;
 	ttext-decoration: none;
 	padding-left: 20px;
-	color: #660066;
+	color: #CC99CC;
 }
 
 
 
 #text_header { 
 	padding: 10px 0px 5px 15px;
-	background-color: #CC9933;
+	background-color: #CCCCCC;
 	font-size: 130%;
 	font-weight: bold;
-	color:#336666;
+	color:#666666;
 }
 #text-column {
 	padding: 15px 15px 25px 15px;
@@ -158,7 +158,7 @@ html,body {
 
 
 .messageBox {
-	border: 1px solid #999900;
+	border: 1px solid #999966;
 	padding: 3px 3px 3px 3px;
 	float: left;
     margin-top: 3px;
