File uploading added to website
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@77 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/css/styles.css
+++ b/src/main/webapps/metabolights/css/styles.css
@@ -22,7 +22,7 @@ html,body {
 	position: relative;
 }
 #footer {
-	background-color: #CCCCCC;
+	background-color: #9999CC;
 	padding-top: 5px;
 	text-align: center;
 	color: rgb(255, 255, 255);
@@ -163,6 +163,16 @@ html,body {
 	float: left;
     margin-top: 3px;
 	
+}
+
+.error {
+	color:#660033;
+	font-weight: bold;
+}
+
+.white {
+    color:#ffffff;
+    font-size: 8px;
 }
 
 /*credits: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/*/
