--- a/src/main/webapps/metabolights/css/styles.css
+++ b/src/main/webapps/metabolights/css/styles.css
@@ -22,16 +22,16 @@ html,body {
 	position: relative;
 }
 #footer {
-	background-color: #9999CC;
+	background-color: #dddddd;
 	padding-top: 5px;
 	text-align: center;
-	color: rgb(255, 255, 255);
 	font-size: 80%;
 	margin-top: 10px;
 	float: left;
 	width: 100%;
 	height: 4em;
-	color: #666666;
+	color: #003333;
+	padding-bottom: 5px;
 }
 #topAndBody {
 	width: 1024px;
@@ -75,7 +75,7 @@ html,body {
 	padding-left: 10px;
 }
 #top_bar #navigation li.selected a,#top_bar #navigation li a:hover {
-	color: #CC99CC;
+	color: #ff9966;
 }
 
 
@@ -126,14 +126,14 @@ html,body {
 	line-height: 40px;
 	ttext-decoration: none;
 	padding-left: 20px;
-	color: #CC99CC;
+	color: #003333;
 }
 
 
 
 #text_header { 
 	padding: 10px 0px 5px 15px;
-	background-color: #CCCCCC;
+	background-color: #cccccc;
 	font-size: 130%;
 	font-weight: bold;
 	color:#666666;
