--- a/src/main/webapps/metabolights/css/styles.css
+++ b/src/main/webapps/metabolights/css/styles.css
@@ -22,7 +22,7 @@ html,body {
 	position: relative;
 }
 #footer {
-	background-color: #dddddd;
+	background-color: #cccccc;
 	padding-top: 5px;
 	text-align: center;
 	font-size: 80%;
@@ -133,7 +133,7 @@ html,body {
 
 #text_header { 
 	padding: 10px 0px 5px 15px;
-	background-color: #FFCC99  ;
+	background-color: #FFCC66  ;
 	font-size: 130%;
 	font-weight: bold;
 	color:#666666;
