--- a/src/main/webapps/metabolights/css/styles.css
+++ b/src/main/webapps/metabolights/css/styles.css
@@ -30,7 +30,7 @@ html,body {
 	float: left;
 	width: 100%;
 	height: 4em;
-	color: #003333;
+	color: #006666;
 	padding-bottom: 5px;
 }
 #topAndBody {
@@ -75,7 +75,7 @@ html,body {
 	padding-left: 10px;
 }
 #top_bar #navigation li.selected a,#top_bar #navigation li a:hover {
-	color: #ff9966;
+	color: #D56060;
 }
 
 
@@ -95,7 +95,8 @@ html,body {
 	color: #fff;
 	font-size: 12px;
 	font-weight: normal;
-	line-height: 40px
+	line-height: 30px;
+	
 }
 #search-box input {
 	float: left;
@@ -112,7 +113,7 @@ html,body {
 	margin: 7px 0px 0px 0px;
 	padding: 0px;
 	height: 21px;
-	width: 23px;
+	width: 46px;
 	cursor: pointer;
 	border: 0px;
 	background-image: url('../img/searchButton.png');
@@ -133,10 +134,10 @@ html,body {
 
 #text_header { 
 	padding: 10px 0px 5px 15px;
-	background-color: #FFCC66  ;
+	background-color: #D5AE60  ;
 	font-size: 130%;
 	font-weight: bold;
-	color:#666666;
+	color:#006666;
 }
 #text-column {
 	padding: 10px 10px 15px 10px;
@@ -158,7 +159,7 @@ html,body {
 
 
 .messageBox {
-	border: 1px solid #999933;
+	border: 1px solid #6F4A00;
 	padding: 3px 3px 3px 3px;
 	float: left;
     margin-top: 3px;
@@ -166,7 +167,7 @@ html,body {
 }
 
 .error {
-	color:#FF6600;
+	color:#AA0000;
 	font-weight: bold;
 }
 
