--- a/metabolights-webapps/.settings/org.eclipse.wst.common.component
+++ b/metabolights-webapps/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapps/metabolights/resources"/>
         <property name="context-root" value="metabolights-webapp"/>
         <property name="java-output-path" value="/metabolights-webapp/target/classes"/>
     </wb-module>
