Mostly changes for user login aspects (user creation, pw reminder etc)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@253 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/.settings/org.eclipse.wst.common.component
+++ b/metabolights-webapps/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="metabolights-webapp">
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapps/metabolights/resources"/>
-        <property name="context-root" value="metabolights-webapp"/>
-        <property name="java-output-path" value="/metabolights-webapp/target/classes"/>
-    </wb-module>
+<wb-module deploy-name="metabolights">
+<wb-resource deploy-path="/" source-path="/src/main/webapps/metabolights"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapps/metabolights/resources"/>
+<property name="java-output-path" value="/metabolights/build/classes"/>
+<property name="context-root" value="doesntwork"/>
+</wb-module>
 </project-modules>
