--- a/specview/src/main/javascript/specview/css/demo.css
+++ b/specview/src/main/javascript/specview/css/demo.css
@@ -54,3 +54,68 @@ label, input {
   font: italic 95% Arial, sans-serif;
   color: #999;
 }
+
+
+
+ #p{}
+ /* This slider refers the left zoom (bottom right rectangle) */
+        #slider1 {
+      position: absolute;
+      left: 775px;
+      top: 75px;
+      width: 30px;
+      height: 13px;
+      font: normal 10px verdana;
+      background-color: #EEE;
+      color: #000;
+      text-align:center;
+      border: 1px solid #999;
+      cursor: default;
+    }
+
+ /* This slider refers the right zoom (bottom left rectangle) */ 
+        #slider2 {
+      position: absolute;
+      left: 625px;
+      top: 75px;
+      width: 30px;
+      height: 13px;
+      font: normal 10px verdana;
+      background-color: #EEE;
+      color: #000;
+      text-align:center;
+      border: 1px solid #999;
+      cursor: default;
+    }
+    
+ /* This slider refers the up and down zoom (upper left rectangle) */
+
+        #slider3 {
+      position: absolute;
+      left: 590px;
+      top: 15px;
+      width: 30px;
+      height: 13px;
+      font: normal 10px verdana;
+      background-color: #EEE;
+      color: #000;
+      text-align:center;
+      border: 1px solid #999;
+      cursor: default;
+    }
+   
+ /* This is the slider to move the spectrum */
+        #slider4 {
+      position: absolute;
+      left: 665px;
+      top: 95px;
+      width: 110px;
+      height: 13px;
+      font: normal 10px verdana;
+      background-color: #EEE;
+      color: #000;
+      text-align:center;
+      border: 1px solid #999;
+      cursor: default;
+    }    
+    
