--- a/metabolights-webapps/src/main/webapps/metabolights/css/styles.css
+++ b/metabolights-webapps/src/main/webapps/metabolights/css/styles.css
@@ -5,9 +5,7 @@
 
 html,body {
 	text-align: center;
-	font-family: Verdana, Arial, Helvetica, Geneva, sans-serif;
 	font-weight: normal;
-	font-size: 12px;
 }
 
 /* Main structure styles (used to layout the header/footer) */
@@ -15,8 +13,10 @@ html,body {
 	background: #ffffff url(../img/searchBox.png) repeat-x left top;
 	height: auto !important;
 	margin: -11px auto -4em;
-	position: relative;
-        width: 1024px;
+	position: relative;width: 1024px;
+    font-family: Verdana, Arial, Helvetica, Geneva, sans-serif;
+    font-size: 11px;
+    
 }
 
 #footer {
@@ -129,6 +129,13 @@ html,body {
     color:#006666;
     margin-top:-10px;
 	
+}
+
+.loggedInAs {
+	font-size:9px;
+	margin-left:30px;
+	color:#999999;
+    line-height: 2em;
 }
 
 .error {
