Search results and detail page changes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@420 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -192,5 +192,7 @@ html,body {
 	margin: 0px;
 }
 
+/* Search Highlights */
+.highlight { background-color: yellow }
 
 /*credits: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/*/
