Usability : make it more interactive with the user
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@442 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/css/demo.css
+++ b/specview/src/main/javascript/specview/css/demo.css
@@ -60,10 +60,10 @@ label, input {
  #p{}
 
  /* This is the slider to move the spectrum */
-        #slider4 {
-      position: absolute;
-      left: 740px;
-      top: 160px;
+        #sliderAtomOpacity {
+      position: absolute; 
+      left: 970px;
+      top: 170px;
       width: 30px;
       height: 13px;
       font: normal 10px verdana;
@@ -74,10 +74,10 @@ label, input {
       cursor: default;
     }    
 
-        #slider3 {
-      position: absolute;
-      left: 470px;
-      top: 248px;
+        #sliderBondOpacity {
+     position: absolute; 
+      left: 970px;
+      top: 187px;
       width: 30px;
       height: 13px;
       font: normal 10px verdana;
@@ -86,4 +86,19 @@ label, input {
       text-align:center;
       border: 1px solid #999;
       cursor: default;
-    }  
+    }
+
+        #sliderPeakopacity {
+     position: absolute; 
+      left: 970px;
+      top: 205px;
+      width: 30px;
+      height: 13px;
+      font: normal 10px verdana;
+      background-color: #EEE;
+      color: #000;
+      text-align:center;
+      border: 1px solid #999;
+      cursor: default;
+    }
+    
