Add bodyleft area (for filter boxes)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@491 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -40,18 +40,19 @@ html,body {
 
 /* Style for the top bar (=header) */
 #top_bar {
-	height: 45px;
+	height: 40px;
 }
 #top_bar h1 {
 	margin-top: 7px;
 	width: 250px;
-	height: 55px;
+	height: 40px;
 	font-size: 1px;
 	text-indent: -9999px;
 	background: url(../img/banner.png) no-repeat left top;
 	float: left;
 	margin-bottom: -20px;
-        border:0px;
+    border:0px;
+	padding:0px;
 }
 #top_bar #navigation {
 	list-style: none;
