Styile for the filter items
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@511 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -1,3 +1,6 @@
+/* . is for a class: class=
+ * # is for an id
+ */
 
 * {
 	margin: 0px;
@@ -196,4 +199,7 @@ html,body {
 /* Search Highlights */
 .highlight { background-color: yellow }
 
+
+/* Class for Filter items */
+.filteritem {padding-left:5px;}
 /*credits: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/*/
