Search result tweaks
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@535 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -227,6 +227,7 @@ a {
 
 /* Rounded borders */
 .resultItem {
+	padding-left:10px;
 	border: 1px solid #D5AE60;
 	border-radius:15px 15px 15px 15px;
    	-moz-border-radius: 15px 15px 15px 15px;
