CSS3 changes, rounded corners and shadows
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@538 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -232,6 +232,9 @@ a {
 	border-radius:15px 15px 15px 15px;
    	-moz-border-radius: 15px 15px 15px 15px;
    	-webkit-border-radius:15px 15px 15px 15px;
+    box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);	
 }
 
 /* Class for Filter items */
