--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -227,7 +227,7 @@ a {
 
 /* Rounded borders */
 .resultItem {
-	padding-left:10px;
+	padding: 5px 5px 5px 10px; /* top right bottom left */
 	border: 1px solid #D5AE60;
 	border-radius:15px 15px 15px 15px;
    	-moz-border-radius: 15px 15px 15px 15px;
