Changes: - made email address the username - added affiliation url (also to .sql file) - made the filter div box only claim width when necessary - removed jdbc.properties and moved these into application.properties. It's easy to have only one, which can then be refered in spring servlet xml - removed isatab blur from about page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@561 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -108,6 +108,10 @@ a {
 	font-size: 120%;
 	font-weight: bold;
 	color:#006666;
+    border-radius:10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius:10px 10px 10px 10px;
+	
 }
 #text-column {
 	padding: 10px 10px 15px 10px;
@@ -138,10 +142,11 @@ a {
 }
 
 .loggedInAs {
-	font-size:9px;
-	margin-left:30px;
-	color:#999999;
-    line-height: 2em;
+	font-size:12px;
+	margin-left:20px;
+	color:#006666;
+    line-height: 3em;
+    font-weight: normal;
 }
 
 .error {
@@ -160,6 +165,10 @@ a {
     padding-top:0px;
     padding-left:20px;
     padding-bottom:15px;
+    border-radius:10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius:10px 10px 10px 10px;
+    
 }
 
 .formheader{
