MOdificationsto make the zoom more efficient (it was unacceptable  before on I.E)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@564 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/css/demo.css
+++ b/specview/src/main/javascript/specview/css/demo.css
@@ -54,6 +54,7 @@ input.smallButton {
 	}
 
 input.button:active {
+	cursor:pointer;
     background-position: bottom right;
     color: #000;
     outline: none; /* hide dotted outline in Firefox */
@@ -229,6 +230,16 @@ input.button:active {
       border: 1px solid #999;
       cursor: default;
     }
+    
+    
+
+ 
+
+      background-color: rgb(250,200,200);
+      border: 1px solid #F99;
+    }
+
+
     
     
     
