New style filterBox
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@611 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -179,6 +179,20 @@ a {
     
 }
 
+.filterbox {
+    border:1px solid #006666;
+    margin-top:10px;
+    padding-top:10px;
+    padding-left:10px;
+    padding-bottom:10px;
+	padding-right:10px;
+    border-radius:10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius:10px 10px 10px 10px;
+    
+}
+
+
 .formheader{
    background-color:#006666;
    color: #FFFFFF;
