Better visibility About and Contact on home page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@642 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -288,6 +288,18 @@ a {
 .topSpacer {
 	height:70px;
 }
-	
+
+#homepageLinks{
+	text-align:center;
+	margin-top:30px;
+}
+
+#homepageLinks a{
+	color: #004242;
+	text-decoration: none;
+	font-weight:bold;
+	padding:10px;
+}
+
 
 /*credits: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/*/
