Make it public functionality.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@703 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -79,7 +79,21 @@ a {
 	cursor: pointer;
 	border: 0px;
 	background-image: url('../img/searchButton.png');
+	
 }
+
+#publish .publish-button {
+	float: left;
+	margin: 0px 0px 0px 0px;
+	padding: 0px;
+	height: 21px;
+	width: 85px;
+	cursor: pointer;
+	border: 0px;
+	background-image: url('../img/makePublicButton.png');
+	
+}
+
 
 #text_header { 
 
