--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -370,5 +370,22 @@ padding: 4px 2px;
 margin-top: 4px;
 }
 
+.smallArrow {
+position: relative;
+top: -1px;
+border-style: solid dashed dashed;
+border-color: transparent;
+border-top-color: silver;
+display: -moz-inline-box;
+display: inline-block;
+font-size: 0;
+height: 0;
+line-height: 0;
+width: 0;
+border-width: 3px 3px 0;
+padding-top: 1px;
+left: 4px;
+}
+
 
 /*credits: http://ryanfait.com/resources/footer-stick-to-bottom-of-page/*/
