UX testing tweaks
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@717 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -375,7 +375,7 @@ position: relative;
 top: -1px;
 border-style: solid dashed dashed;
 border-color: transparent;
-border-top-color: silver;
+border-top-color: #feba12;
 display: -moz-inline-box;
 display: inline-block;
 font-size: 0;
