UX testing tweaks
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@722 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/styles.css
+++ b/metabolights-webapps/src/main/webapp/css/styles.css
@@ -356,10 +356,8 @@ a {
     color: #004242;
 }
 
-
 .big_submit {
-float: right;
-background-color: #72B55F;
+background-color: #006666;
 border: 1px solid #0A4F4F;
 -moz-border-radius: 5px;
 -khtml-border-radius: 5px;
